# askicc

./: .gitignore  CLAUDE.md  Cargo.toml  build.rs  flake.nix
aski/: dialect.aski
bootstrap/: kernel.rs
examples/hello/: constants.aski  constants.aski-table.sema  constants.sema  elements.aski  elements.aski-table.sema  elements.sema  ffitest.aski  ffitest.aski-table.sema  ffitest.sema  generics.aski  generics.aski-table.sema  generics.sema  hello.main  matching.aski  matching.aski-table.sema  matching.sema  math.aski  math.aski-table.sema  math.sema  (+9 more)
flake-crates/: synth-core
source/: Allocation.synth  Aski.synth  Body.synth  Domain.synth  Enum.synth  Expr.synth  ExprAdd.synth  ExprAnd.synth  ExprAtom.synth  ExprCompare.synth  ExprMul.synth  ExprOr.synth  ExprPostfix.synth  Ffi.synth  GenericParam.synth  Instance.synth  IterationSource.synth  Loop.synth  Main.synth  Match.synth  Method.synth  Module.synth  Mutation.synth  Param.synth  Pattern.synth  Process.synth  Root.synth  Signature.synth  Statement.synth  Struct.synth  StructConstruct.synth  TraitDecl.synth  TraitImpl.synth  Type.synth  TypeApplication.synth  TypeImpl.synth  aski-body.synth  aski-domain.synth  aski-expr.synth  aski-ffi.synth  (+33 more)
src/: aski_parse.rs  aski_parse_tests.rs  codegen.rs  codegen_dialect.rs  lexer.rs  lexer_tests.rs  lib.rs  main.rs  synth_lex.rs  synth_lex_tests.rs  synth_parse.rs  synth_parse_tests.rs  synth_token.rs
v015_reference/: Cargo.toml  build.rs  kernel.aski  kernel.rs  lib.rs
v016_attempt/: TERMINOLOGY.md  dialect.rs  header_scan.rs  mod.rs  tokens.rs  types.rs
(+50 files in other folders)
