[package]
name = "askicc"
version = "0.17.0"
edition = "2021"
authors = ["Li Goldragon <li@goldragon.criome.net>"]
description = "askicc — bootstrap compiler: scoped types + dialect structures"

[[bin]]
name = "askicc"
path = "src/main.rs"

[lib]
name = "askicc"
path = "src/lib.rs"

[dependencies]
logos = "0.14"
