[package]
name = "askicc"
version = "0.17.0"
edition = "2021"
authors = ["Li Goldragon <li@goldragon.criome.net>"]
description = "askicc — bootstrap compiler: .synth → rkyv dialect-data-tree"

[[bin]]
name = "askicc"
path = "src/main.rs"

[lib]
name = "askicc"
path = "src/lib.rs"

[dependencies]
aski-core = { path = "flake-crates/aski-core" }
rkyv = { version = "0.8", default-features = false, features = [
    "little_endian",
    "alloc",
] }
