[package]
name = "askicc"
version = "0.17.0"
edition = "2021"
authors = ["Li Goldragon <li@goldragon.criome.net>"]
description = "askicc — bootstrap compiler: .synth → rkyv domain-data-tree (all 5 DSLs in one dsls.rkyv)"

[[bin]]
name = "askicc"
path = "src/main.rs"

[lib]
name = "askicc"
path = "src/lib.rs"

[dependencies]
synth-core = { path = "flake-crates/synth-core" }
rkyv = { version = "0.8", default-features = false, features = [
    "little_endian",
    "alloc",
] }
